Set body's overflow-y to hidden, avoid scrollwheel seizure

--- a/styles/main.css
+++ b/styles/main.css
@@ -69,6 +69,7 @@ body.dark {
 body {
   @apply p-1.5 flex flex-col items-center justify-center;
   background-color: var(--background);
+  overflow-y: hidden;
 }
 
 .indexLayout {
